# svision2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  conanfile.txt  main.cxx  readme.md  sdl_surface.cpp  sdl_surface.h  surface.h
.github/: build.yml  workflows
.github/workflows/: build.yml  clang-format.yml  codespell.yml  static-analysis.yml
docs/: compile-linux.md  compile-windows-mingw.md  compile-windows-vs.md
src/: bitmap.cpp  bitmap.h  button.cpp  button.h  buttonstates.cpp  buttonstates.h  checkbox.cpp  checkbox.h  checkboxshape.h  combobox.cpp  combobox.h  events.h  fontprovider.cpp  fontprovider.h  fontproviderfreetype.cpp  fontproviderfreetype.h  imageview.cxx  imageview.hpp  label.cpp  label.h  layout.cpp  layout.h  listview.cpp  listview.h  main.cxx  mousecursors.h  platform-xcb.cpp  platform-xcb.h  platform.cpp  platform.h  platformwin32-keycodes.h  platformwin32.cpp  platformwin32.h  platformx11-keycodes.h  platformx11.cpp  platformx11.h  radiobuttongroup.cpp  radiobuttongroup.h  scrollbar.cpp  scrollbar.h  (+22 more)
src/fontproviders/: fontproviderstb.cxx  fontproviderstb.hpp
src/image/: loaders.cxx  loaders.hpp
src/themes/: fluent.cpp  fluent.h
tests/: test_buttons.cpp
